add ListarPromocionesUseCase and ListarDescuentosUseCase with corresponding controller endpoints